# aic-flash

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: app_config.rs  build_info.rs  i18n.rs  lib.rs  main.rs  official.rs  standalone.rs
src/image/: parser.rs
src/protocol/: cbw_csw.rs  commands.rs  mod.rs
src/usb/: device.rs
